# EquiDeep

./: .gitignore  main.py  pyproject.toml
.cursor/: mcp.json
.taskmaster/: config.json  state.json
.taskmaster/docs/initial_prds/: deepseek-r1.txt  gpt-5-high.txt  sonnet-4-thinking.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
src/avanza_cli/: __init__.py  cli.py  datastore.py  http.py  link_harvester.py  research.py  schema.py  stock_scraper.py  translator.py
tests/: test_http.py  test_link_harvester.py
tests/fixtures/: avanza_seed.html
