[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = ["src/**/*.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py


[project]
name = "avanza-cli"
version = "0.0.0"
description = "CLI for Avanza scraping and research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "duckduckgo-search>=6.3.0,<7",
    "lxml>=5.3.0,<6",
    "openai>=1.43.0,<2",
    "smolagents>=1.21.2",
    "tenacity>=8.5.0,<9",
]

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
